# android_native_cpp

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/native_est/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
app/src/main/cpp/include/: run.h
app/src/main/java/com/example/native_est/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/native_est/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
